k8s/api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: gcr.io/tcc-ufrj/api:v5
          name: api
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
            name: api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  type: LoadBalancer
  loadBalancerIP: 35.198.46.103
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: api
