k8s/client.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: gsouzab/tcc-client:latest
          name: client
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: client
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: client
