k8s/influx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influx
  labels:
    app: influx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influx
  template:
    metadata:
      labels:
        app: influx
    spec:
      containers:
        # see https://hub.docker.com/_/influxdb/ for config options
        - image: influxdb:1.7-alpine
          name: influx
          ports:
            - containerPort: 8086
              name: influx
          volumeMounts:
            - name: influx-pvc
              mountPath: /var/lib/influxdb
          livenessProbe:
            httpGet:
              path: /ping
              port: 8086
            initialDelaySeconds: 40
            timeoutSeconds: 4
      volumes:
        - name: influx-pvc
          persistentVolumeClaim:
            claimName: influx-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influx
  name: influx
spec:
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    app: influx
