k8s/mosquitto-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
  - name: mosquitto
    port: 1883
    protocol: TCP
    targetPort: 1883
  type: LoadBalancer
