k8s/mosquitto.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        ports:
        - containerPort: 1883
        volumeMounts:
          - name: mosquitto-storage
            mountPath: /mosquitto/data
      volumes:
      - name: mosquitto-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  type: NodePort
  ports:
  - name: mosquitto
    port: 1883
    protocol: TCP
    nodePort: 30000
    targetPort: 1883
