k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sensein.tech
    - api.sensein.tech
    - sdc.sensein.tech
    - mqtt.sensein.tech
    - influx.sensein.tech
    secretName: sensein-letscrypt-tls
  rules:
  - host: sensein.tech
    http:
      paths:
      - backend:
          serviceName: client
          servicePort: 80
  - host: sdc.sensein.tech
    http:
      paths:
      - backend:
          serviceName: sdc
          servicePort: 18630
  - host: mqqt.sensein.tech
    http:
      paths:
      - backend:
          serviceName: mqtt
          servicePort: 1883
  - host: influx.sensein.tech
    http:
      paths:
      - backend:
          serviceName: influx
          servicePort: 8086
  - host: api.sensein.tech
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8000
